--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
+		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -31,6 +31,7 @@
 		<mapsruct.version>1.6.2</mapsruct.version>
 		<swagger.version>2.5.0</swagger.version>
 		<eureka-client.version>4.1.3</eureka-client.version>
+		<lombock.version>1.18.36</lombock.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,6 +55,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>${lombock.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -102,10 +104,18 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>17</source>
+					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>${lombock.version}</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapsruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
